--- a/w0 catbook-react/index.html
+++ b/w0 catbook-react/index.html
@@ -2,32 +2,32 @@
 <html>
 
 <head>
-  <title>Catbook</title>
+  <title>Keyist's Catbook</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
   <nav class="navContainer"> <!--Could surround the nav element with <header> tags to make it more semantically correct -->
-    <h1 class="navTitle">Catbook</h1> <!--Replace with <a> when catbook has a homepage to link to!-->
+    <h1 class="navTitle">Keyist's Catbook</h1> <!--Replace with <a> when catbook has a homepage to link to!-->
   </nav>
 
   <div class="appContainer">
     <div class="avatarContainer">
       <div class="avatar"></div>
     </div>
-    <h1 class="name u-textCenter">Buka Buka</h1>
+    <h1 class="name u-textCenter">Keyist</h1>
     <hr class="line" />
     <div class="u-flex">
       <section class="subContainer u-textCenter">
         <h4 class="subTitle">About Me</h4>
         <p>
-          I am more of a turtle person but I'm just trying to fit in and get a catbook.
+          I'm just trying to fit in as a cat programmer and get a catbook.
         </p>
       </section>
       <section class="subContainer u-textCenter">
         <h4 class="subTitle">My Favorite Type of Cat</h4>
         <p>
-          I actually prefer turtles.
+          A black cat named cat.
         </p>
       </section>
     </div>
